# lau-agent-organism

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: act.rs  conservation.rs  conserve.rs  death.rs  holonomy.rs  learn.rs  lib.rs  organism.rs  perceive.rs  reproduce.rs  self_model.rs  thermodynamics.rs
