[package]
name = "lau-agent-organism"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-agent-organism"
description = "The agent the mathematics wants — thermodynamically closed, cohomologically self-aware, categorically closed organism"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
